# astra

./: .gitignore  README.md  meson.build  meson_options.txt
data/: astra.gresource.xml  dev.avyos.Astra.desktop  dev.avyos.Astra.desktop.in  dev.avyos.Astra.metainfo.xml.in  meson.build
data/assets/: new-tab.html
data/styles/: astra.css
include/astra/: astra-application.h  astra-browser-view.h  astra-downloads.h  astra-file-manager.h  astra-permissions.h  astra-settings.h  astra-utils.h  astra-webapp.h  astra-window.h
meson/: postinstall.py
packaging/: README.md
src/: app.c  app.h  astra-application.c  astra-browser-view.c  astra-downloads.c  astra-file-manager.c  astra-permissions.c  astra-settings.c  astra-utils.c  astra-webapp.c  astra-window.c  astra.c  astra.h  browser.c  browser.h  downloads.c  downloads.h  file_page.c  file_page.h  library.c  library.h  main.c  meson.build  pwa.c  pwa.h  service_scheme.c  service_scheme.h  settings.c  settings.h
